--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -18,11 +18,12 @@
 
 <h2>xyz functional prototype</h2>
 
-<div class="navigation"><a ui-sref="list"> list </a> | <a ui-sref="embeds"> embeds </a></div>
+<div class="navigation"><a ui-sref="list"> list </a> | <a ui-sref="stream"> stream </a></div>
 
-<div ui-view="main" class="admin">
+<div ui-view="main" >
 
 </div>
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
@@ -30,11 +31,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
 
 <script src="scripts/app.js"></script>
-<script src="scripts/service/song.js"></script>
-<script src="scripts/service/global-players.js"></script>
-<script src="scripts/controller/song.js"></script>
-<script src="scripts/controller/embed.js"></script>
 
-<script src="scripts/player-api/youtube.js"></script>
+<script src="scripts/service/song.js"></script>
+<script src="scripts/service/stream.js"></script>
+<script src="scripts/service/global-players.js"></script>
+<script src="scripts/service/ytApi.js"></script>
+<script src="scripts/service/server.js"></script>
+
+<script src="scripts/controller/song.js"></script>
+<script src="scripts/controller/stream.js"></script>
+
+<script src="scripts/directive/youtube.js"></script>
+
 </body>
 </html>
