--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -18,7 +18,7 @@
 
 <h2>xyz functional prototype</h2>
 
-<div class="navigation"><a ui-sref="list"> list </a> | <a ui-sref="stream"> stream </a></div>
+<div class="navigation"><a ui-sref="list"> list </a> | <a ui-sref="stream"> stream </a> | <a ui-sref="embeds"> embed test </a></div>
 
 <div ui-view="main" >
 
@@ -27,6 +27,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-sanitize.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
 
