stream working, band camp requires play click

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -43,6 +43,7 @@
 <script src="scripts/controller/stream.js"></script>
 
 <script src="scripts/directive/youtube.js"></script>
+<script src="scripts/directive/bandcamp.js"></script>
 
 </body>
 </html>
