--- a/client/index.html
+++ b/client/index.html
@@ -33,12 +33,16 @@
 <h2>xyz functional prototype</h2>
 
 <div class="navigation">
-  <a ui-sref="list"> list </a> |
+  <a ui-sref="list"> my xyz list </a> |
+  <a ui-sref="import"> import </a> |
    <a ui-sref="stream"> stream </a> |
   <a ui-sref="embeds"> embed test </a> |
   <a ui-sref="social"> social test </a>
 </div>
 
+<div ui-view="top" >
+
+</div>
 <div ui-view="main" >
 
 </div>
@@ -51,6 +55,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-easyfb/build/angular-easyfb.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -74,6 +79,8 @@
         <script src="scripts/services/social.js"></script>
         <script src="scripts/controllers/socialtest.js"></script>
         <script src="scripts/controllers/rename.js"></script>
+        <script src="scripts/controllers/localitems.js"></script>
+        <script src="scripts/controllers/import.js"></script>
         <!-- endbuild -->
 
 
