--- a/client/index.html
+++ b/client/index.html
@@ -30,14 +30,9 @@
 
 <body ng-app="xyzApp">
 
-<h2>xyz functional prototype</h2>
+<div ui-view="base">
 
-<div class="navigation">
-  <a ui-sref="list"> my xyz list </a> |
-  <a ui-sref="import"> import </a> |
-   <a ui-sref="stream"> stream </a> |
-  <a ui-sref="embeds"> embed test </a> |
-  <a ui-sref="social"> social test </a>
+<div class="navigation" ui-view="navigation" >
 </div>
 
 <div ui-view="top" >
@@ -48,6 +43,7 @@
 </div>
 
 
+</div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
