sc_callback file

--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,14 @@
         <script src="scripts/controllers/import.js"></script>
         <!-- endbuild -->
 
+<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
+
+<script>
+  SC.initialize({
+    client_id: 'c29e4129f2bba3771a5472a65cad37e4',
+    redirect_uri: 'http://example.com/callback'
+  });
+</script>
 
 </body>
 </html>
