correct sc redirect uri

--- a/client/index.html
+++ b/client/index.html
@@ -109,7 +109,7 @@
 <script>
   SC.initialize({
     client_id: 'c29e4129f2bba3771a5472a65cad37e4',
-    redirect_uri: 'http://example.com/callback'
+    redirect_uri: 'http://xyz.d2.xyz.gs/sc_callback'
   });
 </script>
 
