--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
 <script src="scripts/controllers/import.js"></script>
 <script src="scripts/controllers/space.js"></script>
 <script src="scripts/services/mediaapi.js"></script>
+<script src="scripts/services/utility.js"></script>
 <!-- endbuild -->
 
 
