--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
 <script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/angular-easyfb/build/angular-easyfb.js"></script>
 <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -85,6 +86,7 @@
 <script src="scripts/services/utility.js"></script>
 <script src="scripts/directives/previewing.js"></script>
 <script src="scripts/controllers/preview.js"></script>
+<script src="scripts/services/player.js"></script>
 <!-- endbuild -->
 
 
@@ -112,7 +114,7 @@
 
   angular.module('xyzApp')
       .value('serverConfig', {
-        apiBaseUrl: 'http://l.h:5000/',
+        apiBaseUrl: '/',
         developing: true
       });
 
