--- a/client/index.html
+++ b/client/index.html
@@ -50,13 +50,13 @@
 </div>
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="bower_components/lodash/lodash.js"></script>
-<script src="bower_components/angular-easyfb/build/angular-easyfb.js"></script>
-<script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
-<script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="vendor/angular/angular.js"></script>
+<script src="vendor/angular-sanitize/angular-sanitize.js"></script>
+<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="vendor/lodash/lodash.js"></script>
+<script src="vendor/angular-easyfb/build/angular-easyfb.js"></script>
+<script src="vendor/angular-local-storage/dist/angular-local-storage.js"></script>
+<script src="vendor/angular-touch/angular-touch.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
