--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
 <script src="vendor/angular-easyfb/build/angular-easyfb.js"></script>
 <script src="vendor/angular-local-storage/dist/angular-local-storage.js"></script>
 <script src="vendor/angular-touch/angular-touch.js"></script>
+<script src="vendor/angular-resource/angular-resource.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -68,6 +69,7 @@
 <script src="scripts/services/stream.js"></script>
 <script src="scripts/services/ytApi.js"></script>
 <script src="scripts/services/server.js"></script>
+<script src="scripts/services/lb-services.js"></script>
 
 <script src="scripts/controllers/list.js"></script>
 <script src="scripts/controllers/stream.js"></script>
