--- a/client/index.html
+++ b/client/index.html
@@ -91,6 +91,7 @@
 <script src="scripts/services/player.js"></script>
 <script src="scripts/controllers/landing.js"></script>
 <script src="scripts/services/user.js"></script>
+<script src="scripts/controllers/sidebar.js"></script>
 <!-- endbuild -->
 
 
