--- a/client/index.html
+++ b/client/index.html
@@ -102,14 +102,14 @@
         apiBaseUrl: '/'
       })
       .constant('apiKeys',{
-        sc:'c29e4129f2bba3771a5472a65cad37e4',
-        yt:'AIzaSyAv5-et2TSQ3VsA5eKLviq2KjfExzFLxO8',
-        fb_app_id:'1507355422928214'// PROD: '1381485208848570'
+        sc:'%%%scKey',
+        yt:'%%%ytKey',
+        fb_app_id:'%%%facebookAppId'// PROD: '1381485208848570'
       });
 </script>
 <!-- /build -->
 
-<!-- build:remove:dist,prod -->
+<!-- build:remove -->
 <script>
   /**
    * this gets removed after grunt build - for debug/development only
