--- a/client/index.html
+++ b/client/index.html
@@ -7,33 +7,14 @@
   <script type="text/javascript">
     document.write('<base href="' + document.location + '" />');
   </script>
-
-  <!-- build:css(.) styles/vendor.css -->
-  <!-- bower:css -->
-  <!-- endbower -->
-  <!-- endbuild -->
-  <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
-
-
-  <style type="text/css">
-
-    body {
-
-    }
-
-    a {
-
-    }
-
-  </style>
+<!-- build:css css/main.min.css -->
+  <link rel="stylesheet" href="css/main.css">
+<!-- endbuild -->
 </head>
 
 <body ng-app="xyzApp">
 
 <div ui-view="base">
-
 
   <div ui-view="top">
 
@@ -48,7 +29,8 @@
 
 
 </div>
-<!-- build:js(.) scripts/vendor.js -->
+
+<!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="vendor/angular/angular.js"></script>
 <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
@@ -59,9 +41,12 @@
 <script src="vendor/angular-touch/angular-touch.js"></script>
 <script src="vendor/angular-resource/angular-resource.js"></script>
 <!-- endbower -->
+
+<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
+
 <!-- endbuild -->
 
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
+<!-- build:js scripts/scripts.js -->
 
 <script src="scripts/app.js"></script>
 
@@ -95,44 +80,42 @@
 <!-- endbuild -->
 
 
+<!-- build:remove -->
+<script>
+
+    //FORMAT of apiBaseUrl: 'http://l.h:5000/'
+
+
+  angular.module('xyzApp')
+      .value('serverConfig', {
+        apiBaseUrl: 'http://0.0.0.0:3000/',// '/',
+        developing: true
+      })
+      .constant('apiKeys', {
+        sc: 'c29e4129f2bba3771a5472a65cad37e4',
+        yt: 'AIzaSyAv5-et2TSQ3VsA5eKLviq2KjfExzFLxO8',
+        fb_app_id: '1507355422928214'// PROD: '1381485208848570'
+      });
+
+
+</script>
+<!-- /build -->
+
+
 <!-- build:template  note: grunt build does not work -->
 <script>
   angular.module('xyzApp')
       .value('serverConfig', {
         apiBaseUrl: '/'
       })
-      .constant('apiKeys',{
-        sc:'%%%scKey',
-        yt:'%%%ytKey',
-        fb_app_id:'%%%facebookAppId'// PROD: '1381485208848570'
+      .constant('apiKeys', {
+        sc: '%%%scKey',
+        yt: '%%%ytKey',
+        fb_app_id: '%%%facebookAppId'// PROD: '1381485208848570'
       });
 </script>
 <!-- /build -->
 
-<!-- build:remove -->
-<script>
-  /**
-   * this gets removed after grunt build - for debug/development only
-   *DEV MODE
-   */
-
-  //FORMAT of apiBaseUrl: 'http://l.h:5000/'
-
-  angular.module('xyzApp')
-      .value('serverConfig', {
-        apiBaseUrl: 'http://0.0.0.0:3000/',// '/',
-        developing: true
-      });
-
-
-</script>
-<!-- /build -->
-
-
-<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
-
-<script>
-</script>
-
+something
 </body>
 </html>
