--- a/client/index.html
+++ b/client/index.html
@@ -106,7 +106,7 @@
 <script>
   angular.module('xyzApp')
       .value('serverConfig', {
-        apiBaseUrl: '/'
+        apiBaseUrl: '%%%API_URL'
       })
       .constant('apiKeys', {
         sc: '%%%scKey',
