--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
-
+<!--
   <script type="text/javascript">
     document.write('<base href="' + document.location + '" />');
-  </script>
+  </script>-->
+
 <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
 <!-- endbuild -->
