--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,9 @@
 <!-- endbuild -->
 </head>
 
-<body ng-app="xyzApp">
+<body ng-app="xyzApp" >
 
-<div ui-view="base">
+<div ui-view="base" ng-controller="BodyCtrl">
 
   <div ui-view="top">
 
@@ -67,6 +67,7 @@
 <script src="scripts/services/social.js"></script>
 <script src="scripts/controllers/socialtest.js"></script>
 <script src="scripts/controllers/rename.js"></script>
+<script src="scripts/controllers/body.js"></script>
 <script src="scripts/controllers/localitems.js"></script>
 <script src="scripts/controllers/import.js"></script>
 <script src="scripts/controllers/space.js"></script>
