--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
 <script src="vendor/angular-local-storage/dist/angular-local-storage.js"></script>
 <script src="vendor/angular-touch/angular-touch.js"></script>
 <script src="vendor/angular-resource/angular-resource.js"></script>
+<script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
 <!-- endbower -->
 
 
