--- a/stream/index.html
+++ b/stream/index.html
@@ -37,9 +37,9 @@
     </script>
 
 
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
 <!--<script type='text/javascript' src="includes/jquery.ui.draggable.js"></script>-->
-<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 
