stream uses new playlist endpoint

--- a/stream/index.html
+++ b/stream/index.html
@@ -17,7 +17,7 @@
         }
 
         console.log(window.location.pathname.split('/'));
-        var xyz_root_dir = 'http://xyz.d2.xyz.gs/api/spaces/'+playlistId+'/songs';
+        var xyz_root_dir = 'http://xyz.d2.xyz.gs/api/spaces/playlist?spaceId='+playlistId;
         console.log('apiURL: ',xyz_root_dir);
         var editable = false;
 
