--- a/stream/index.html
+++ b/stream/index.html
@@ -119,7 +119,7 @@
 
         console.log('all songs are done loading?  ', allsongsdone);
         console.info('player state ',xyz_youtube);
-        if(allsongsdone && xyz_youtube){
+        if(allsongsdone && xyz_youtube && xyz_youtube.isReady){
             $('#initializing').hide();
             // comment if want to be able to click to start
 
