alert if can't find data

--- a/stream/index.html
+++ b/stream/index.html
@@ -130,7 +130,7 @@
                 playSong(songs[0].id);
             });
         } else {
-            console.log('youtube ready? ',xyz_youtube.isReady());
+            alert('cannot load data from xyz - please try again later');
         }
     }
 </script>
