--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,7 @@
 
 
   angular.module('xyzApp')
-      .value('serverConfig', {
+      .constant('serverConfig', {
         apiBaseUrl: 'http://0.0.0.0:5005/',// '/',
         developing: true
       })
@@ -108,7 +108,7 @@
 <!-- build:template  note: grunt build does not work -->
 <script>
   angular.module('xyzApp')
-      .value('serverConfig', {
+      .constant('serverConfig', {
         apiBaseUrl: '%%%API_URL'
       })
       .constant('apiKeys', {
