enlarge landing view (model does not scale, so neither should view)
background of body also has gradient - better than grey

--- a/client/index.html
+++ b/client/index.html
@@ -15,11 +15,8 @@
 
 <body ng-app="xyzApp" >
 
-<div ui-view="base" ng-controller="BodyCtrl">
+<div ng-controller="BodyCtrl">
 
-  <div ui-view="top">
-
-  </div>
   <div class="main-container" ui-view="main">
 
   </div>
