--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 
 <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/xyz-component-style.css">
 <!-- endbuild -->
 </head>
 
@@ -77,6 +78,10 @@
 <script src="scripts/controllers/landing.js"></script>
 <script src="scripts/services/user.js"></script>
 <script src="scripts/controllers/sidebar.js"></script>
+
+
+<script src="xyz-player-component/xyz-player-directive.js"></script>
+<script src="xyz-player-component/mock-media-provider/mock-media-provider-service.js"></script>
 <!-- endbuild -->
 
 
@@ -116,6 +121,5 @@
 </script>
 <!-- /build -->
 
-something
 </body>
 </html>
