mock provider essentially done

--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
 
 <script src="xyz-player-component/xyz-player-directive.js"></script>
 <script src="xyz-player-component/mock-media-provider/mock-media-provider-service.js"></script>
+<script src="xyz-player-component/mock-media-provider/mock-media-provider-controller.js"></script>
 <!-- endbuild -->
 
 
