--- a/client/xyz-player-component/mock-media-provider/mock-media-provider-view.html
+++ b/client/xyz-player-component/mock-media-provider/mock-media-provider-view.html
@@ -1,9 +1,5 @@
 <div class="mock-media-provider-view">
-
-    <h3>mock media provider view</h3>
-
-
-    <div id="gradient" />
+    <div ng-style="MockMediaProvider.getBackgroundCss()"> mock media provider view </div>
 </div>
 
 
