--- a/client/xyz-player-component/xyz-player.html
+++ b/client/xyz-player-component/xyz-player.html
@@ -1,5 +1,7 @@
 <div class="xyz-player" ng-if="spaceIsOpen()">
   <h3>xyz player </h3>
+
+  <h4>{{message}}</h4>
   <button ng-click="close()"> close </button>
   <p>space name, owner, permalink goes here</p>
 
