--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,23 @@
 
 
 <!-- endbuild -->
+
+
+
+
+
+<!--
+
 <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
+-->
+
+
+<script src="https://w.soundcloud.com/player/api.js"></script>
+
+
+
+
+
 
 <!-- build:js scripts/scripts.js -->
 
@@ -62,7 +78,7 @@
 <script src="scripts/directives/xyz-draggable.js"></script>
 <script src="scripts/services/extract.js"></script>
 <script src="scripts/services/social.js"></script>
-<script src="scripts/controllers/socialtest.js"></script>
+
 <script src="scripts/controllers/rename.js"></script>
 <script src="scripts/controllers/body.js"></script>
 <script src="scripts/controllers/localitems.js"></script>
