--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,8 @@
 
 
 <script src="xyz-player-component/xyz-player-directive.js"></script>
+<script src="xyz-player-component/api.service.js"></script>
+<script src="xyz-player-component/constants.js"></script>
 <script src="xyz-player-component/mock-media-provider/mock-media-provider-service.js"></script>
 <script src="xyz-player-component/mock-media-provider/mock-media-provider-controller.js"></script>
 <script src="xyz-player-component/youtube-component/youtube-api-service.js"></script>
