make api / consistent

--- a/client/index.html
+++ b/client/index.html
@@ -84,14 +84,14 @@
 <script src="scripts/controllers/sidebar.js"></script>
 
 
-<script src="xyz-player-component/xyz-player-directive.js"></script>
-<script src="xyz-player-component/api.service.js"></script>
-<script src="xyz-player-component/mock-media-provider/mock-media-provider-service.js"></script>
-<script src="xyz-player-component/mock-media-provider/mock-media-provider-controller.js"></script>
-<script src="xyz-player-component/youtube-component/youtube-api-service.js"></script>
-<script src="xyz-player-component/youtube-component/youtube-directive.js"></script>
-<script src="xyz-player-component/youtube-component/youtube-provider-controller.js"></script>
-<script src="xyz-player-component/soundcloud-component/soundcloud-directive.js"></script>
+<script src="../xyz-player-component/xyz-player-directive.js"></script>
+<script src="../xyz-player-component/api.service.js"></script>
+<script src="../xyz-player-component/mock-media-provider/mock-media-provider-service.js"></script>
+<script src="../xyz-player-component/mock-media-provider/mock-media-provider-controller.js"></script>
+<script src="../xyz-player-component/youtube-component/youtube-api-service.js"></script>
+<script src="../xyz-player-component/youtube-component/youtube-directive.js"></script>
+<script src="../xyz-player-component/youtube-component/youtube-provider-controller.js"></script>
+<script src="../xyz-player-component/soundcloud-component/soundcloud-directive.js"></script>
 
 
 <!-- endbuild -->
@@ -105,7 +105,7 @@
 
   angular.module('xyzApp')
       .constant('serverConfig', {
-        apiBaseUrl: 'http://0.0.0.0:5005/',// '/',
+        apiBaseUrl: 'http://0.0.0.0:5005/api/',// '/',
         developing: true
       })
       .constant('apiKeys', {
