--- a/stream/index.html
+++ b/stream/index.html
@@ -42,7 +42,7 @@
 
     angular.module('xyzPlayer')
         .constant('serverConfig', {
-          apiBaseUrl: 'http://0.0.0.0:5005/',// '/',
+          apiBaseUrl: 'http://0.0.0.0:5005/api',// '/',
           developing: true
         })
         .constant('apiKeys', {
