make api url relative.. move absolute url definition to gulp serve for dev purposes

--- a/stream/index.html
+++ b/stream/index.html
@@ -68,7 +68,7 @@
     <!-- /build -->
 
 
-    <!-- build:template  note: grunt build does not work -->
+    <!-- build:template -->
     <script>
       angular.module('xyzPlayer')
           .constant('serverConfig', {
