--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/xyz-component-style.css">
   <!-- endbuild -->
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body ng-app="xyzApp">
