icon set dependency, play / pause icons

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,13 @@
 
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/xyz-component-style.css">
+  <link rel="stylesheet" href="css/xyz-component-style-app-only.css">
   <!-- endbuild -->
+
+
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 </head>
 
@@ -40,7 +45,11 @@
 <script src="vendor/angular-local-storage/dist/angular-local-storage.js"></script>
 <script src="vendor/angular-touch/angular-touch.js"></script>
 <script src="vendor/angular-resource/angular-resource.js"></script>
+<script src="vendor/angular-animate/angular-animate.js"></script>
+<script src="vendor/angular-aria/angular-aria.js"></script>
+<script src="vendor/angular-material/angular-material.js"></script>
 <script type="text/javascript" src="vendor/angular-live-set/dist/live-set.js"></script>
+
 <!-- endbower -->
 
 
