--- a/xyz-player-component/xyz-player.html
+++ b/xyz-player-component/xyz-player.html
@@ -38,8 +38,12 @@
 
             <div class="media-controls">
 
-                <button ng-click="play()">play</button>
-                <button ng-click="pause()">pause</button>
+                <button ng-click="play()">
+                  <md-icon class="material-icons">play_arrow</md-icon>
+                </button>
+                <button ng-click="pause()">
+                  <md-icon class="material-icons">pause</md-icon>
+                </button>
             </div>
 
             <div class="progress-bar" ng-if="false">
