--- a/stream/index.html
+++ b/stream/index.html
@@ -4,7 +4,9 @@
   </meta>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>XYZ STREAM </title>
-  <link rel="stylesheet" type="text/css" href="style.css"></link>
+  <link rel="stylesheet" type="text/css" href="style.css">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 <div ng-app="xyzStream">
@@ -80,7 +82,7 @@
     </script>
     <!-- /build -->
 
-
+</div>
 </body>
 
 </html>
