--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
 <script src="scripts/controllers/landing.js"></script>
 <script src="scripts/services/user.js"></script>
 <script src="scripts/controllers/sidebar.js"></script>
+<script src="scripts/controllers/SiteWidePlayerCtrl.js"></script>
 
 
 <script src="../xyz-player-component/xyz-player-directive.js"></script>
