--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
   <!-- endbuild -->
 
 
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
